kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  labels:
    app: workspace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workspace
  template:
    metadata:
      name: workspace
      labels:
        app: workspace
    spec:
      containers:
        - name: jupyter-lab
          image: kanchishimono/pyspark-jupyter:master
          resources:
            limits:
              memory: 1Gi
              cpu: 1
          ports:
            - containerPort: 8888
            - containerPort: 4040
          volumeMounts:
            - mountPath: /home/spark
              name: home-volume
            - mountPath: /mnt/data
              name: data-volume
            - mountPath: /opt/spark/conf
              name: spark-conf
            - mountPath: /tmp/spark-events
              name: spark-event-log
        - name: history-server
          image: kanchishimono/spark:master
          resources:
            limits:
              memory: 1Gi
              cpu: 1
          command: ["/opt/history-server-entrypoint.sh"]
          ports:
            - containerPort: 18080
          volumeMounts:
            - mountPath: /tmp/spark-events
              name: spark-event-log
      volumes:
        - name: home-volume
          persistentVolumeClaim:
            claimName: home-nfs-pvc
        - name: data-volume
          persistentVolumeClaim:
            claimName: data-nfs-pvc
        - name: spark-conf
          configMap:
            name: spark-conf
        - name: spark-event-log
          emptyDir: {}
