kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc
  labels:
    app: workspace
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: workspace
  ports:
    - name: jupyter-lab
      port: 8888
    - name: spark-ui
      port: 4040
    - name: history-server
      port: 18080
